# acapy-jsonld-creds-demo

./: .gitignore  README.md  docker-compose.yml  openapi.yml  pyproject.toml
acapy-client/acapy_client/api/did_exchange/: post_didexchange_receive_request.py
acapy-client/acapy_client/api/issue_credential_v20/: create_credential.py  get_records.py  send_credential.py  send_proposal.py
acapy-client/acapy_client/api/out_of_band/: post_out_of_band_receive_invitation.py
acapy-client/acapy_client/models/: __init__.py  conn_record.py  did.py  indy_cred_precis.py  invitation_receive_request.py  invitation_receive_request_service.py  v20_cred_create.py  v20_cred_ex_record_detail.py  v20_cred_filter.py  v20_cred_offer_request.py  v20_cred_proposal_request_preview_mand.py  v20_cred_proposal_request_preview_opt.py
acapy_jsonld_creds_demo/: __main__.py
configs/: holder.yml  issuer.yml
docker/: Dockerfile.demo
scripts/: generate-client.sh
