[tool.poetry]
name = "acapy-jsonld-creds-demo"
version = "0.1.0"
description = "Demonstrate JSON-LD credentials using ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"
PyYAML = "^5.4.1"
acapy-client = {git = "https://github.com/indicio-tech/acapy-client", rev = "36dfddc8b38e9d5edb86ee0a8a46d1a1bb92b95f"}

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
